--- a/CRM/CRM_GUI/KlientWindow.xaml
+++ b/CRM/CRM_GUI/KlientWindow.xaml
@@ -5,31 +5,25 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CRM_GUI"
         mc:Ignorable="d"
-        Title="Dodaj klienta" Height="522.3" Width="651.2">
-    <Grid Margin="0,0,-0.4,-20" Height="440" VerticalAlignment="Top">
-        <Label x:Name='labNazwa' Content="Nazwa:" HorizontalAlignment="Left" Height="32" Margin="33,16,0,0" VerticalAlignment="Top" Width="109" FontSize="14" />
-        <Label x:Name='labBranza' Content="Branża:" HorizontalAlignment="Left" Height="32" Margin="33,53,0,0" VerticalAlignment="Top" Width="109" FontSize="14" />
-        <Label x:Name='labNIP' Content="NIP:" HorizontalAlignment="Left" Height="32" Margin="33,90,0,0" VerticalAlignment="Top" Width="109" FontSize="14" />
-        <Label x:Name='labDataZal' Content="Miasto:" HorizontalAlignment="Left" Height="32" Margin="33,201,0,0" VerticalAlignment="Top" Width="109" FontSize="14" />
-        <Label x:Name='labKraj' Content="Kraj:" HorizontalAlignment="Left" Height="32" Margin="33,164,0,0" VerticalAlignment="Top" Width="109" FontSize="14" />
-        <Label x:Name='labMiasto' Content="Data założenia:" HorizontalAlignment="Left" Height="32" Margin="33,127,0,0" VerticalAlignment="Top" Width="109" FontSize="14" />
-        <Label x:Name='labAdres' Content="Adres:" HorizontalAlignment="Left" Height="32" Margin="33,238,0,0" VerticalAlignment="Top" Width="109" FontSize="14" />
-        <Label x:Name='labKodPocztowy' Content="Kod pocztowy:" HorizontalAlignment="Left" Height="32" Margin="33,275,0,0" VerticalAlignment="Top" Width="109" FontSize="14" />
-        <Label x:Name='labNotatki' Content="Opis:" HorizontalAlignment="Left" Height="32" Margin="33,312,0,0" VerticalAlignment="Top" Width="109" FontSize="14" />
-        <Label x:Name='labStatus' Content="Status klienta:" HorizontalAlignment="Left" Height="32" Margin="33,349,0,0" VerticalAlignment="Top" Width="109" FontSize="14" />
-        <Label x:Name='labStatus_Copy' Content="Uwagi:" HorizontalAlignment="Left" Height="32" Margin="33,386,0,0" VerticalAlignment="Top" Width="109" FontSize="14" />
-        <TextBox x:Name="txtNazwa" HorizontalAlignment="Left" Height="32" Margin="147,16,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="465"/>
-        <TextBox x:Name="txtNIP" HorizontalAlignment="Left" Height="32" Margin="147,90,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="465"/>
-        <TextBox x:Name="txtDataZal" HorizontalAlignment="Left" Height="32" Margin="147,127,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="465"/>
-        <TextBox x:Name="txtKraj" HorizontalAlignment="Left" Height="32" Margin="147,164,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="465"/>
-        <TextBox x:Name="txtMiasto" HorizontalAlignment="Left" Height="32" Margin="147,201,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="465"/>
-        <TextBox x:Name="txtAdres" HorizontalAlignment="Left" Height="32" Margin="147,238,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="465"/>
-        <TextBox x:Name="txtKodPocz" HorizontalAlignment="Left" Height="32" Margin="147,275,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="465"/>
-        <TextBox x:Name="txtOpis" HorizontalAlignment="Left" Height="32" Margin="147,312,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="465"/>
-        <TextBox x:Name="txtUwagi" HorizontalAlignment="Left" Height="32" Margin="147,386,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="465"/>
-        <Button x:Name="buttonZatwierdz" Content="Zatwierdź" HorizontalAlignment="Left" Height="32" Margin="421,440,0,-32" VerticalAlignment="Top" Width="93"/>
-        <Button x:Name="buttonAnuluj" Content="Anuluj" HorizontalAlignment="Left" Height="32" Margin="519,440,0,-32" VerticalAlignment="Top" Width="93"/>
-        <ComboBox x:Name="cmboxBranze" HorizontalAlignment="Left" Height="32" Margin="147,53,0,0" VerticalAlignment="Top" Width="465">
+        Title="Dodaj klienta" Height="464.7" Width="651.2">
+    <Grid Margin="0,0,-0.2,0" Height="442" VerticalAlignment="Top">
+        <Label x:Name='labNazwa' Content="Nazwa:" HorizontalAlignment="Left" Height="32" Margin="33,16,0,0" VerticalAlignment="Top" Width="139" FontSize="14" />
+        <Label x:Name='labBranza' Content="Branża:" HorizontalAlignment="Left" Height="32" Margin="33,53,0,0" VerticalAlignment="Top" Width="139" FontSize="14" />
+        <Label x:Name='labNIP' Content="NIP:" HorizontalAlignment="Left" Height="32" Margin="33,90,0,0" VerticalAlignment="Top" Width="139" FontSize="14" />
+        <Label x:Name='labDataZal' Content="Miasto:" HorizontalAlignment="Left" Height="32" Margin="33,201,0,0" VerticalAlignment="Top" Width="139" FontSize="14" />
+        <Label x:Name='labKraj' Content="Kraj:" HorizontalAlignment="Left" Height="32" Margin="33,164,0,0" VerticalAlignment="Top" Width="139" FontSize="14" />
+        <Label x:Name='labMiasto' Content="Data założenia:" HorizontalAlignment="Left" Height="32" Margin="33,127,0,0" VerticalAlignment="Top" Width="139" FontSize="14" />
+        <Label x:Name='labStatus' Content="Status klienta:" HorizontalAlignment="Left" Height="32" Margin="33,239,0,0" VerticalAlignment="Top" Width="139" FontSize="14" />
+        <Label x:Name='labStatus_Copy' Content="Uwagi:" HorizontalAlignment="Left" Height="32" Margin="33,313,0,0" VerticalAlignment="Top" Width="139" FontSize="14" />
+        <TextBox x:Name="txtNazwa" HorizontalAlignment="Left" Height="32" Margin="177,16,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="435"/>
+        <TextBox x:Name="txtNIP" HorizontalAlignment="Left" Height="32" Margin="177,90,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="435"/>
+        <TextBox x:Name="txtDataZal" HorizontalAlignment="Left" Height="32" Margin="177,127,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="435"/>
+        <TextBox x:Name="txtKraj" HorizontalAlignment="Left" Height="32" Margin="177,164,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="435"/>
+        <TextBox x:Name="txtMiasto" HorizontalAlignment="Left" Height="32" Margin="177,201,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="435"/>
+        <TextBox x:Name="txtUwagi" HorizontalAlignment="Left" Height="32" Margin="177,313,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="435"/>
+        <Button x:Name="buttonZatwierdz" Content="Zatwierdź" HorizontalAlignment="Left" Height="32" Margin="421,372,0,0" VerticalAlignment="Top" Width="93" Click="buttonZatwierdz_Click"/>
+        <Button x:Name="buttonAnuluj" Content="Anuluj" HorizontalAlignment="Left" Height="32" Margin="519,372,0,0" VerticalAlignment="Top" Width="93" Click="buttonAnuluj_Click"/>
+        <ComboBox x:Name="cmboxBranze" HorizontalAlignment="Left" Height="32" Margin="177,53,0,0" VerticalAlignment="Top" Width="435">
             <ComboBoxItem Content="IT" HorizontalAlignment="Left" Width="463.2"/>
             <ComboBoxItem Content="Finanse" HorizontalAlignment="Left" Width="463.2"/>
             <ComboBoxItem Content="Elektronika" HorizontalAlignment="Left" Width="463.2"/>
@@ -39,12 +33,14 @@
             <ComboBoxItem Content="Energetyka" HorizontalAlignment="Left" Width="463.2"/>
             <ComboBoxItem Content="Inne" HorizontalAlignment="Left" Width="463.2"/>
         </ComboBox>
-        <ComboBox x:Name="cmboxStatus" HorizontalAlignment="Left" Height="32" Margin="147,349,0,0" VerticalAlignment="Top" Width="465">
+        <ComboBox x:Name="cmboxStatus" HorizontalAlignment="Left" Height="32" Margin="177,239,0,0" VerticalAlignment="Top" Width="435">
             <ComboBoxItem Content="Stały" HorizontalAlignment="Left" Width="463.2"/>
             <ComboBoxItem Content="Były" HorizontalAlignment="Left" Width="463.2"/>
             <ComboBoxItem Content="Nowy" HorizontalAlignment="Left" Width="463.2"/>
             <ComboBoxItem Content="Potencjalny" HorizontalAlignment="Left" Width="463.2"/>
         </ComboBox>
+        <Label x:Name='labPlanKontakt' Content="Planowany kontakt:" HorizontalAlignment="Left" Height="32" Margin="33,276,0,0" VerticalAlignment="Top" Width="139" FontSize="14" />
+        <TextBox x:Name="txtPlanKontakt" HorizontalAlignment="Left" Height="32" Margin="177,275,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="435"/>
 
     </Grid>
 </Window>
