Kolory, dopracowanie GUI OrgProwadzacejCRM i Pracownikow

--- a/CRM/CRM_GUI/PracownicyWindow.xaml
+++ b/CRM/CRM_GUI/PracownicyWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:CRM="clr-namespace:CRM;assembly=CRM"
         xmlns:local="clr-namespace:CRM_GUI"
         mc:Ignorable="d"
-        Title="Pracownicy" Height="487.333" Width="966.667">
+        Title="Pracownicy" Height="530" Width="1048.667">
     <Window.Resources>
         <ObjectDataProvider x:Key="enumStanowiska" MethodName="GetValues" ObjectType="{x:Type sys:Enum}">
             <ObjectDataProvider.MethodParameters>
@@ -21,117 +21,61 @@
         </ObjectDataProvider>
     </Window.Resources>
 
-    <Grid Margin="0,0,0,-0.333">
-        <Grid.Background>
-            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                <GradientStop Color="#FF3EB2DE" Offset="0.007"/>
-                <GradientStop Color="#FF006CC7" Offset="1"/>
-                <GradientStop Color="#FF8FDBF7" Offset="0.522"/>
-            </LinearGradientBrush>
-        </Grid.Background>
-        <ListBox x:Name="lstPracownicy" HorizontalAlignment="Left" Height="297" Margin="27,50,0,0" VerticalAlignment="Top" Width="591" Background="#FFD1F7FF"/>
-        <Button x:Name="butDodajPrac" Content="Dodaj pracownika" HorizontalAlignment="Left" Height="30" Margin="623,282,0,0" VerticalAlignment="Top" Width="287" Click="butDodajPrac_Click" FontSize="14" BorderBrush="#FF5471FB">
-            <Button.Background>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="#FFE9F5FF" Offset="0"/>
-                    <GradientStop Color="#FF1B176D" Offset="1"/>
-                    <GradientStop Color="#FF5D97FF" Offset="0.734"/>
-                </LinearGradientBrush>
-            </Button.Background>
-        </Button>
-        <Button x:Name="butUsunPrac" Content="Usuń pracownika" HorizontalAlignment="Left" Height="30" Margin="623,317,0,0" VerticalAlignment="Top" Width="287" Click="butUsunPrac_Click" FontSize="14" BorderBrush="#FF5471FB">
-            <Button.Background>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="#FFE9F5FF" Offset="0"/>
-                    <GradientStop Color="#FF1B176D" Offset="1"/>
-                    <GradientStop Color="#FF5D97FF" Offset="0.734"/>
-                </LinearGradientBrush>
-            </Button.Background>
-        </Button>
-        <Button x:Name="butSortPrac" Content="Sortuj" HorizontalAlignment="Left" Height="30" Margin="623,108,0,0" VerticalAlignment="Top" Width="287" Click="butSortPrac_Click" FontSize="14" BorderBrush="#FF5471FB">
-            <Button.Background>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="#FFE9F5FF" Offset="0"/>
-                    <GradientStop Color="#FF1B176D" Offset="1"/>
-                    <GradientStop Color="#FF5D97FF" Offset="0.734"/>
-                </LinearGradientBrush>
-            </Button.Background>
-        </Button>
-        <ComboBox x:Name="cmbSortPrac" HorizontalAlignment="Left" Height="30" Margin="623,73,0,0" VerticalAlignment="Top" Width="287" RenderTransformOrigin="0.898,0.476" FontSize="14" Background="#FFD1F7FF">
+    <Grid Margin="0,0,3,4.667" Background="White">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Rectangle Fill="#FF006674" HorizontalAlignment="Stretch" Height="46" VerticalAlignment="Top"/>
+        <ListBox x:Name="lstPracownicy" HorizontalAlignment="Left" Height="417" Margin="27,50,0,0" VerticalAlignment="Top" Width="684" Background="#FFDAFAFF" BorderBrush="#FF006674" Foreground="#FF001E22"/>
+        <Button x:Name="butDodajPrac" Content="Dodaj pracownika" HorizontalAlignment="Left" Height="30" Margin="742,318,0,0" VerticalAlignment="Top" Width="287" Click="butDodajPrac_Click" FontSize="14" BorderBrush="#FF006674" Foreground="White" FontWeight="Bold" Background="#FF008698"/>
+        <Button x:Name="butUsunPrac" Content="Usuń pracownika" HorizontalAlignment="Left" Height="30" Margin="743,388,0,0" VerticalAlignment="Top" Width="287" Click="butUsunPrac_Click" FontSize="14" BorderBrush="#FF006674" Foreground="White" FontWeight="Bold" Background="#FF003C44"/>
+        <Button x:Name="butSortPrac" Content="Sortuj" HorizontalAlignment="Left" Height="30" Margin="742,121,0,0" VerticalAlignment="Top" Width="287" Click="butSortPrac_Click" FontSize="14" BorderBrush="#FF006674" Foreground="White" FontWeight="Bold" Background="#FF007C8D"/>
+        <ComboBox x:Name="cmbSortPrac" HorizontalAlignment="Left" Height="30" Margin="742,86,0,0" VerticalAlignment="Top" Width="287" RenderTransformOrigin="0.898,0.476" FontSize="14" Background="#FF879AF3" Foreground="#FF002A30" BorderBrush="#FF3959F5">
             <ComboBoxItem Content="Alfabetycznie" HorizontalAlignment="Left" Width="236"/>
             <ComboBoxItem Content="Po dacie zatrudnienia malejąco" HorizontalAlignment="Left" Width="236"/>
             <ComboBoxItem Content="Po dacie zatrudnienia rosnąco" HorizontalAlignment="Left" Width="236"/>
         </ComboBox>
-        <Button x:Name="butWyszukajPracPo" Content="Wyszukaj" HorizontalAlignment="Left" Height="30" Margin="623,213,0,0" VerticalAlignment="Top" Width="287" Click="butWyszukajPracPo_Click" FontSize="14" BorderBrush="#FF5471FB">
-            <Button.Background>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="#FFE9F5FF" Offset="0"/>
-                    <GradientStop Color="#FF1B176D" Offset="1"/>
-                    <GradientStop Color="#FF5D97FF" Offset="0.734"/>
-                </LinearGradientBrush>
-            </Button.Background>
-        </Button>
-        <ComboBox x:Name="cmbWyszukajPracPo" HorizontalAlignment="Left" Height="30" Margin="623,180,0,0" VerticalAlignment="Top" Width="287" FontSize="14" Background="#FFD1F7FF">
+        <Button x:Name="butWyszukajPracPo" Content="Wyszukaj" HorizontalAlignment="Left" Height="30" Margin="742,226,0,0" VerticalAlignment="Top" Width="287" Click="butWyszukajPracPo_Click" FontSize="14" BorderBrush="#FF006674" Foreground="White" FontWeight="Bold" Background="#FF007C8D"/>
+        <ComboBox x:Name="cmbWyszukajPracPo" HorizontalAlignment="Left" Height="30" Margin="742,193,0,0" VerticalAlignment="Top" Width="287" FontSize="14" Background="#FFD1F7FF" Foreground="#FF120717">
             <ComboBoxItem Content="Po stanowisku" HorizontalAlignment="Left" Width="236"/>
             <ComboBoxItem Content="Po płci" HorizontalAlignment="Left" Width="236"/>
             <ComboBoxItem Content="Po dacie rozpoczęcia pracy" HorizontalAlignment="Left" Width="236"/>
         </ComboBox>
-        <Label x:Name="labPracownicy" Content="Liczba wszystkich pracowników: " HorizontalAlignment="Left" Height="40" Margin="27,10,0,0" VerticalAlignment="Top" Width="265" FontSize="16" FontWeight="Bold"/>
-        <Button x:Name="butEdytujDane" Content="Edytuj dane pracowników" HorizontalAlignment="Left" Height="30" Margin="27,352,0,0" VerticalAlignment="Top" Width="265" Click="butEdytujDane_Click" FontSize="14" BorderBrush="#FF5471FB">
-            <Button.Background>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="#FFE9F5FF" Offset="0"/>
-                    <GradientStop Color="#FF1B176D" Offset="1"/>
-                    <GradientStop Color="#FF5D97FF" Offset="0.734"/>
-                </LinearGradientBrush>
-            </Button.Background>
-        </Button>
-        <Button x:Name="butPokazWszystkich" Content="Pokaż dane wszystkich pracowników" HorizontalAlignment="Left" Height="32" Margin="346,352,0,0" VerticalAlignment="Top" Width="272" Click="butPokazWszystkich_Click" FontSize="14" BorderBrush="#FF5471FB">
-            <Button.Background>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="#FFE9F5FF" Offset="0"/>
-                    <GradientStop Color="#FF1B176D" Offset="1"/>
-                    <GradientStop Color="#FF5D97FF" Offset="0.734"/>
-                </LinearGradientBrush>
-            </Button.Background>
-        </Button>
-
-        <Grid x:Name="InputBox" Visibility="Collapsed">
+        <Label x:Name="labPracownicy" Content="Liczba wszystkich pracowników: " HorizontalAlignment="Left" Height="30" Margin="725,11,0,0" VerticalAlignment="Top" Width="265" FontSize="16" FontWeight="SemiBold" Foreground="White" FontStretch="Expanded"/>
+        <Button x:Name="butEdytujDane" Content="Edytuj dane pracowników" HorizontalAlignment="Left" Height="30" Margin="742,353,0,0" VerticalAlignment="Top" Width="287" Click="butEdytujDane_Click" FontSize="14" BorderBrush="#FF006674" Foreground="White" FontWeight="Bold" Background="#FF006674"/>
+        <Button x:Name="butPokazWszystkich" Content="Pokaż dane wszystkich pracowników" HorizontalAlignment="Left" Height="32" Margin="742,263,0,0" VerticalAlignment="Top" Width="287" Click="butPokazWszystkich_Click" FontSize="14" BorderBrush="#FF006674" Foreground="White" FontWeight="Bold" Background="#FF005763"/>
+        <TextBlock x:Name="txtBlockJakSortowac" HorizontalAlignment="Left" Height="30" Margin="742,56,0,0" TextWrapping="Wrap" Text="Wybierz jak posortować pracowników" VerticalAlignment="Top" Width="286" FontSize="14" TextAlignment="Center" FontStretch="SemiExpanded" FontWeight="Bold" Foreground="#FF00525E"/>
+        <TextBlock x:Name="txtBlockJakWszukac" HorizontalAlignment="Left" Height="30" Margin="742,164,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="286" FontSize="14" TextAlignment="Center" FontWeight="Bold" Foreground="#FF00525E"><Run Text="Wybierz"/><Run Text=" "/><Run Text="po czym wyszukać pracowników"/></TextBlock>
+        <Button x:Name="butUsunWszystkichPrac" Content="Usuń wszystkich pracowników" HorizontalAlignment="Left" Height="30" Margin="742,437,0,0" VerticalAlignment="Top" Width="287" Click="butUsunWszystkichPrac_Click" FontSize="14" BorderBrush="#FF006674" Foreground="White" FontWeight="Bold" Background="#FF00272C"/>
+        <TextBlock x:Name="txtBoxLiczbaPrac" HorizontalAlignment="Left" Height="22" Margin="967,19,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="59" FontSize="16" FontWeight="SemiBold" RenderTransformOrigin="2.028,0.571" TextAlignment="Center" Foreground="White"/>
+        <Label x:Name="labPracownicyLista" Content="Lista pracowników:" HorizontalAlignment="Left" Height="39" Margin="27,2,0,0" VerticalAlignment="Top" Width="591" FontSize="20" FontWeight="SemiBold" Foreground="White" FontStretch="Expanded"/>
+        <Grid x:Name="InputBox" Visibility="Collapsed" Margin="0,0,0,0.333">
             <Grid Background="Black" Opacity="0.5"/>
             <Border
             MinWidth="250"
-            Background="Orange" 
-            BorderBrush="Black" 
+            Background="#FF006674" 
+            BorderBrush="#FF006674" 
             BorderThickness="1" 
             HorizontalAlignment="Center" 
             VerticalAlignment="Center">
                 <StackPanel>
-                    <TextBlock Margin="5" Text="Input Box:" FontWeight="Bold" FontFamily="Cambria" />
+
                     <StackPanel>
-                        <TextBox MinWidth="150" HorizontalAlignment="Center" VerticalAlignment="Center" x:Name="InputTextBox"  Visibility="Collapsed"/>
+                        <TextBlock Margin="5" Text="Wybierz stanowisko" FontWeight="Bold" Foreground="White"  Visibility="Collapsed" x:Name="txtStanowisko"/>
+                        <TextBlock Margin="5" Text="Wybierz płeć" FontWeight="Bold" Foreground="White"  Visibility="Collapsed" x:Name="txtPlec"/>
+                        <TextBlock Margin="5" Text="Wpisz datę, przed którą zatrudniono pracowników" FontWeight="Bold" Foreground="White"  Visibility="Collapsed" x:Name="txtData"/>
+                        <TextBox MinWidth="150" HorizontalAlignment="Center" VerticalAlignment="Center" x:Name="txtBoxData"  Visibility="Collapsed" Background="#FFDAFAFF" BorderBrush="#FF006674"/>
                         <ComboBox x:Name="cmbWyszPoStanowisku" MinWidth="150" HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="Collapsed"
                                      ItemsSource="{Binding Source={StaticResource enumStanowiska}}"/>
                         <ComboBox x:Name="cmbWyszPoPlci" MinWidth="150" HorizontalAlignment="Center" VerticalAlignment="Center"   Visibility="Collapsed"
                                      ItemsSource="{Binding Source={StaticResource enumPlcie}}"/>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                        <Button x:Name="butWyszukaj" Margin="5" Content="Wyszukaj" Background="{x:Null}" Click="butWyszukaj_Click"/>
-                        <Button x:Name="butAnuluj" Margin="5" Content="Anuluj" Background="{x:Null}" Click="butAnuluj_Click" />
+                        <Button x:Name="butWyszukaj" Margin="5" Content="Wyszukaj" Background="#FF00333A" BorderBrush="#FF006674" Foreground="White" Click="butWyszukaj_Click" Height="30" Width="70"/>
+                        <Button x:Name="butAnuluj" Margin="5" Content="Anuluj" Background="#FF00333A" BorderBrush="#FF006674" Foreground="White" Click="butAnuluj_Click" Width="70" />
                     </StackPanel>
                 </StackPanel>
             </Border>
         </Grid>
-        <TextBlock x:Name="txtBlockJakSortowac" HorizontalAlignment="Left" Height="30" Margin="623,43,0,0" TextWrapping="Wrap" Text="Wybierz jak posortować pracowników" VerticalAlignment="Top" Width="286" FontSize="14" TextAlignment="Center" FontStretch="SemiExpanded" FontWeight="Bold"/>
-        <TextBlock x:Name="txtBlockJakWszukac" HorizontalAlignment="Left" Height="30" Margin="623,151,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="286" FontSize="14" TextAlignment="Center" FontWeight="Bold"><Run Text="Wybierz"/><Run Text=" "/><Run Text="po czym wyszukać pracowników"/></TextBlock>
-        <Button x:Name="butUsunWszystkichPrac" Content="Usuń wszystkich pracowników" HorizontalAlignment="Left" Height="30" Margin="27,387,0,0" VerticalAlignment="Top" Width="591" Click="butUsunWszystkichPrac_Click" FontSize="14" BorderBrush="#FF5471FB">
-            <Button.Background>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="#FFE9F5FF" Offset="0"/>
-                    <GradientStop Color="#FF1B176D" Offset="1"/>
-                    <GradientStop Color="#FF5D97FF" Offset="0.734"/>
-                </LinearGradientBrush>
-            </Button.Background>
-        </Button>
-        <TextBlock x:Name="txtBoxLiczbaPrac" HorizontalAlignment="Left" Height="35" Margin="290,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="59" FontSize="16" FontWeight="Bold" RenderTransformOrigin="2.028,0.571" TextAlignment="Center"/>
     </Grid>
 </Window>
