--- a/CRM/CRM_GUI/MainWindow.xaml
+++ b/CRM/CRM_GUI/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:sys="clr-namespace:System;assembly=mscorlib"
         xmlns:CRM="clr-namespace:CRM;assembly=CRM" x:Name="windowCRM" x:Class="CRM_GUI.MainWindow"
         mc:Ignorable="d"
-        Title="CRM" Height="495" Width="800">
+        Title="CRM" Height="495" Width="840">
     <Window.Resources>
         <ObjectDataProvider x:Key="dataFromEnum" MethodName="GetValues" ObjectType="{x:Type sys:Enum}">
             <ObjectDataProvider.MethodParameters>
@@ -16,37 +16,46 @@
         </ObjectDataProvider>
     </Window.Resources>
     <Grid>
-        <Label x:Name="labNazwa" Content="Nazwa organizacji" HorizontalAlignment="Left" Height="33" Margin="23,52,0,0" VerticalAlignment="Top" Width="130"/>
-        <Label x:Name="labBranza" Content="Branża" HorizontalAlignment="Left" Height="33" Margin="23,90,0,0" VerticalAlignment="Top" Width="130"/>
-        <Label x:Name="labNIP" Content="NIP" HorizontalAlignment="Left" Height="33" Margin="23,128,0,0" VerticalAlignment="Top" Width="130"/>
-        <Label x:Name="labDataZal" Content="Data założenia" HorizontalAlignment="Left" Height="33" Margin="23,166,0,0" VerticalAlignment="Top" Width="130"/>
-        <Label x:Name="labKraj" Content="Kraj" HorizontalAlignment="Left" Height="33" Margin="23,204,0,0" VerticalAlignment="Top" Width="130"/>
-        <Label x:Name="labMiasto" Content="Miasto" HorizontalAlignment="Left" Height="33" Margin="23,242,0,0" VerticalAlignment="Top" Width="130"/>
-        <Label x:Name="labAdres" Content="Adres" HorizontalAlignment="Left" Height="33" Margin="23,280,0,0" VerticalAlignment="Top" Width="130"/>
-        <Label x:Name="labKodPoczt" Content="Kod pocztowy" HorizontalAlignment="Left" Height="33" Margin="23,318,0,0" VerticalAlignment="Top" Width="130"/>
-        <Label x:Name="labNotatki" Content="Notatki" HorizontalAlignment="Left" Height="33" Margin="23,356,0,0" VerticalAlignment="Top" Width="130"/>
-        <TextBox x:Name="txtKodPoczt" HorizontalAlignment="Left" Height="33" Margin="158,318,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="400"/>
-        <TextBox x:Name="txtAdres" HorizontalAlignment="Left" Height="33" Margin="158,280,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="400"/>
-        <TextBox x:Name="txtMiasto" HorizontalAlignment="Left" Height="33" Margin="158,242,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="400"/>
-        <TextBox x:Name="txtKraj" HorizontalAlignment="Left" Height="33" Margin="158,204,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="400"/>
-        <TextBox x:Name="txtDataZal" HorizontalAlignment="Left" Height="33" Margin="158,166,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="400"/>
-        <TextBox x:Name="txtNIP" HorizontalAlignment="Left" Height="33" Margin="158,128,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="400"/>
-        <TextBox x:Name="txtNazwa" HorizontalAlignment="Left" Height="33" Margin="159,52,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="400"/>
-        <TextBox x:Name="txtNotatki" HorizontalAlignment="Left" Height="97" Margin="158,356,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="625"/>
-        <Button x:Name="butProdukty" Content="Produkty" HorizontalAlignment="Left" Height="71" Margin="593,204,0,0" VerticalAlignment="Top" Width="190"/>
-        <Button x:Name="butPracownicy" Content="Pracownicy" HorizontalAlignment="Left" Height="71" Margin="593,128,0,0" VerticalAlignment="Top" Width="190" Click="butPracownicy_Click"/>
-        <Button x:Name="butKlienci" Content="Klienci" HorizontalAlignment="Left" Height="71" Margin="593,52,0,0" VerticalAlignment="Top" Width="190" Click="butKlienci_Click"/>
-        <Button x:Name="butKonkurenci" Content="Konkurenci" HorizontalAlignment="Left" Height="71" Margin="593,280,0,0" VerticalAlignment="Top" Width="190"/>
-        <Menu Grid.ColumnSpan="2" HorizontalAlignment="Stretch" Height="25" VerticalAlignment="Top">
-            <MenuItem Header="Menu" FontSize="16">
-                <MenuItem x:Name="Wczytaj" Header="Wczytaj z pliku"  Click="menuWczytaj_Click" />
-                <MenuItem x:Name="Zapisz" Header="Zapisz do pliku" Click="menuZapisz_Click"  />
-                <MenuItem x:Name="Wyjdz" Header="Wyjdź" Click="menuWyjdz_Click"  />
+        <Label x:Name="labNazwa" Content="Nazwa organizacji" HorizontalAlignment="Left" Height="33" Margin="35,52,0,0" VerticalAlignment="Top" Width="140" Background="{x:Null}" Foreground="#FF00525E" FontWeight="Bold" FontSize="15"/>
+        <Label x:Name="labBranza" Content="Branża" HorizontalAlignment="Left" Height="33" Margin="35,90,0,0" VerticalAlignment="Top" Width="140" Background="{x:Null}" Foreground="#FF00525E" FontWeight="Bold" FontSize="15"/>
+        <Label x:Name="labNIP" Content="NIP" HorizontalAlignment="Left" Height="33" Margin="35,128,0,0" VerticalAlignment="Top" Width="139" Background="{x:Null}" Foreground="#FF00525E" FontWeight="Bold" FontSize="15"/>
+        <Label x:Name="labDataZal" Content="Data założenia" HorizontalAlignment="Left" Height="33" Margin="35,166,0,0" VerticalAlignment="Top" Width="143" Background="{x:Null}" Foreground="#FF00525E" FontWeight="Bold" FontSize="15"/>
+        <Label x:Name="labKraj" Content="Kraj" HorizontalAlignment="Left" Height="33" Margin="35,204,0,0" VerticalAlignment="Top" Width="141" Background="{x:Null}" Foreground="#FF00525E" FontWeight="Bold" FontSize="15" RenderTransformOrigin="0.5,0.5">
+            <Label.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform AngleY="0.338"/>
+                    <RotateTransform Angle="0.787"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Label.RenderTransform>
+        </Label>
+        <Label x:Name="labMiasto" Content="Miasto" HorizontalAlignment="Left" Height="33" Margin="35,242,0,0" VerticalAlignment="Top" Width="139" Background="{x:Null}" Foreground="#FF00525E" FontWeight="Bold" FontSize="15"/>
+        <Label x:Name="labAdres" Content="Adres" HorizontalAlignment="Left" Height="33" Margin="35,280,0,0" VerticalAlignment="Top" Width="139" Background="{x:Null}" Foreground="#FF00525E" FontWeight="Bold" FontSize="15"/>
+        <Label x:Name="labKodPoczt" Content="Kod pocztowy" HorizontalAlignment="Left" Height="33" Margin="35,318,0,0" VerticalAlignment="Top" Width="139" Background="{x:Null}" Foreground="#FF00525E" FontWeight="Bold" FontSize="15"/>
+        <Label x:Name="labNotatki" Content="Notatki" HorizontalAlignment="Left" Height="33" Margin="35,356,0,0" VerticalAlignment="Top" Width="109" Background="{x:Null}" Foreground="#FF00525E" FontWeight="Bold" FontSize="15"/>
+        <TextBox x:Name="txtKodPoczt" HorizontalAlignment="Left" Height="33" Margin="194,318,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="400" Background="#FFDAFAFF" BorderBrush="#FF006674" Foreground="#FF02262B"/>
+        <TextBox x:Name="txtAdres" HorizontalAlignment="Left" Height="33" Margin="194,280,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="400" Background="#FFDAFAFF" BorderBrush="#FF006674" Foreground="#FF02262B"/>
+        <TextBox x:Name="txtMiasto" HorizontalAlignment="Left" Height="33" Margin="194,242,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="400" Background="#FFDAFAFF" BorderBrush="#FF006674" Foreground="#FF02262B"/>
+        <TextBox x:Name="txtKraj" HorizontalAlignment="Left" Height="33" Margin="194,204,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="400" Background="#FFDAFAFF" BorderBrush="#FF006674" Foreground="#FF02262B"/>
+        <TextBox x:Name="txtDataZal" HorizontalAlignment="Left" Height="33" Margin="194,166,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="400" Background="#FFDAFAFF" BorderBrush="#FF006674" Foreground="#FF02262B"/>
+        <TextBox x:Name="txtNIP" HorizontalAlignment="Left" Height="33" Margin="194,128,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="400" Background="#FFDAFAFF" BorderBrush="#FF006674" Foreground="#FF02262B"/>
+        <TextBox x:Name="txtNazwa" HorizontalAlignment="Left" Height="33" Margin="195,52,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="400" Background="#FFDAFAFF" BorderBrush="#FF006674" Foreground="#FF02262B" FontWeight="Bold"/>
+        <TextBox x:Name="txtNotatki" HorizontalAlignment="Left" Height="97" Margin="194,356,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="625" Background="#FFDAFAFF" BorderBrush="#FF006674" Foreground="#FF02262B" FontStyle="Italic"/>
+        <Button x:Name="butProdukty" Content="Produkty" HorizontalAlignment="Left" Height="71" Margin="629,204,0,0" VerticalAlignment="Top" Width="190" FontWeight="Bold" FontSize="18" BorderBrush="#FF006674" Background="#FF04535E" Foreground="White"/>
+        <Button x:Name="butPracownicy" Content="Pracownicy" HorizontalAlignment="Left" Height="71" Margin="629,128,0,0" VerticalAlignment="Top" Width="190" Click="butPracownicy_Click" FontWeight="Bold" FontSize="18" BorderBrush="#FF006674" Background="#FF006674" Foreground="White"/>
+        <Button x:Name="butKlienci" Content="Klienci" HorizontalAlignment="Left" Height="71" Margin="629,52,0,0" VerticalAlignment="Top" Width="190" Click="butKlienci_Click" FontWeight="Bold" FontSize="18" BorderBrush="#FF006674" Background="#FF047382" Foreground="White"/>
+        <Button x:Name="butKonkurenci" Content="Konkurenci" HorizontalAlignment="Left" Height="71" Margin="629,280,0,0" VerticalAlignment="Top" Width="190" FontWeight="Bold" FontSize="18" BorderBrush="#FF006674" Background="#FF05464F" Foreground="White"/>
+        <Menu HorizontalAlignment="Stretch" Height="46" VerticalAlignment="Top" Margin="2,0,-1.667,0" Background="#FF006674" Foreground="White" BorderBrush="#FF003E46">
+            <MenuItem Header="Menu" FontSize="20" BorderBrush="#FF006674" Foreground="White" Background="#FF006674" Height="46" Width="102">
+                <MenuItem x:Name="Wczytaj" Header="Wczytaj z pliku"  Click="menuWczytaj_Click" Background="#FF006674" BorderBrush="#FF003E46" FontSize="18" />
+                <MenuItem x:Name="Zapisz" Header="Zapisz do pliku" Click="menuZapisz_Click" Background="#FF006674" BorderBrush="#FF003E46" FontSize="18"  />
+                <MenuItem x:Name="Wyjdz" Header="Wyjdź" Click="menuWyjdz_Click" Background="#FF006674" BorderBrush="#FF003E46" FontSize="18"  />
             </MenuItem>
         </Menu>
-        
-        <ComboBox x:Name="cmbBranza" HorizontalAlignment="Left" Height="33" Margin="159,90,0,0" VerticalAlignment="Top" Width="399"
-                  ItemsSource="{Binding Source={StaticResource dataFromEnum}}">
+
+        <ComboBox x:Name="cmbBranza" HorizontalAlignment="Left" Height="33" Margin="195,90,0,0" VerticalAlignment="Top" Width="399"
+                  ItemsSource="{Binding Source={StaticResource dataFromEnum}}" Background="#FFDAFAFF" BorderBrush="#FF006674" Foreground="#FF02262B" FontWeight="Bold">
         </ComboBox>
     </Grid>
 </Window>
