--- a/CRM/CRM_GUI/OsobyKontaktoweWindow.xaml
+++ b/CRM/CRM_GUI/OsobyKontaktoweWindow.xaml
@@ -5,8 +5,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CRM_GUI"
         mc:Ignorable="d"
-        Title="OsobyKontaktoweWindow" Height="450" Width="800">
+        Title="Lista kontaktów" Height="450" Width="800">
     <Grid>
-        
+        <ListBox x:Name="lstDzialania" HorizontalAlignment="Left" Height="291" Margin="23,83,0,0" VerticalAlignment="Top" Width="500"/>
+        <TextBlock x:Name="textblockNazwaFirmy" HorizontalAlignment="Left" Height="29" Margin="208,15,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="315" FontSize="16"/>
+        <ComboBox x:Name="cmbboxSortuj" HorizontalAlignment="Left" Height="29" Margin="570,118,0,0" VerticalAlignment="Top" Width="195" FontSize="13" >
+            <ComboBoxItem Content="Alfabetycznie: od A do Z" HorizontalAlignment="Left" Width="165.6" FontSize="13"/>
+            <ComboBoxItem Content="Alfabetycznie: od Z do A" HorizontalAlignment="Left" Width="165.6" FontSize="13"/>
+        </ComboBox>
+        <Button x:Name="buttonSortuj" Content="Sortuj" HorizontalAlignment="Left" Height="30" Margin="570,83,0,0" VerticalAlignment="Top" Width="195" FontSize="14"/>
+        <Button x:Name="buttonDodajKontakt" Content="Dodaj kontakt" HorizontalAlignment="Left" Height="34" Margin="570,181,0,0" VerticalAlignment="Top" Width="195" FontSize="14"/>
+        <Button x:Name="buttonEdytujKontakt" Content="Edytuj kontakt" HorizontalAlignment="Left" Height="34" Margin="570,220,0,0" VerticalAlignment="Top" Width="195" FontSize="14"/>
+        <Button x:Name="buttonUsunKontakt" Content="Usuń kontakt" HorizontalAlignment="Left" Height="34" Margin="570,259,0,0" VerticalAlignment="Top" Width="195" FontSize="14"/>
+        <Button x:Name="buttonUsunWszKontakty" Content="Usuń kontakty" HorizontalAlignment="Left" Height="34" Margin="570,340,0,0" VerticalAlignment="Top" Width="195" FontSize="14"/>
+        <Label Content="Lista kontaktów" HorizontalAlignment="Left" Margin="23,44,0,0" VerticalAlignment="Top" Width="185" Height="34" FontSize="16"/>
+
     </Grid>
 </Window>
